--- a/res/xml/lockscreen_clock.xml
+++ b/res/xml/lockscreen_clock.xml
@@ -54,6 +54,19 @@
         settings:units="dp"
         android:defaultValue="50" />
 
+    <com.bliss.support.preferences.SystemSettingListPreference
+        android:key="lockscreen_clock_type"
+        android:title="@string/lockscreen_clock_color_type"
+        android:entries="@array/lock_clock_color_entries"
+        android:entryValues="@array/lock_clock_color_values"
+        android:defaultValue="0" />
+
+     <com.bliss.support.colorpicker.ColorPickerPreference
+        android:key="lockscreen_clock_color"
+        android:title="@string/lockscreen_clock_color"
+        settings:defaultColorValue="0xffffffff"
+        android:dependency="lockscreen_clock_type" />
+
     <Preference
         android:key="clock_font_size_warning"
         android:selectable="false"
@@ -119,6 +132,11 @@
         settings:units="dp"
         android:defaultValue="18" />
 
+     <com.bliss.support.colorpicker.ColorPickerPreference
+        android:key="lockscreen_date_color"
+        android:title="@string/lockscreen_clock_date_color"
+        settings:defaultColorValue="0xffffffff" />
+
     </PreferenceCategory>
 
     <!-- LockScreen Date -->
@@ -142,6 +160,11 @@
         settings:units="dp"
         android:defaultValue="18" />
 
+    <com.bliss.support.colorpicker.ColorPickerPreference
+        android:key="lockscreen_owner_info_color"
+        android:title="@string/lockscreen_owner_info_color"
+        settings:defaultColorValue="0xffffffff" />
+
     </PreferenceCategory>
 
     <!-- LockScreen Colors -->
@@ -149,21 +172,6 @@
         android:key="lockscreen_colorscategory"
         android:icon="@drawable/ic_clock"
         android:title="@string/lockscreen_colors">
-
-     <com.bliss.support.colorpicker.ColorPickerPreference
-        android:key="lockscreen_clock_color"
-        android:title="@string/lockscreen_clock_color"
-        settings:defaultColorValue="0xffffffff" />
-
-     <com.bliss.support.colorpicker.ColorPickerPreference
-        android:key="lockscreen_date_color"
-        android:title="@string/lockscreen_clock_date_color"
-        settings:defaultColorValue="0xffffffff" />
-
-    <com.bliss.support.colorpicker.ColorPickerPreference
-        android:key="lockscreen_owner_info_color"
-        android:title="@string/lockscreen_owner_info_color"
-        settings:defaultColorValue="0xffffffff" />
 
      <com.bliss.support.colorpicker.ColorPickerPreference
         android:key="lockscreen_weather_temp_color"
