--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -870,6 +870,8 @@
     <string name="lockscreen_weather_show_city_summary">Show name of current city on left of image</string>
     <string name="lockscreen_weather_show_temp_title">Show temperature</string>
     <string name="lockscreen_weather_show_temp_summary">Show current city temperature on right of image</string>
+    <string name="lockscreen_weather_show_image_title">Show weather image icon</string>
+    <string name="lockscreen_weather_show_image_summary">Show hide/weather image icon</string>
 
     <!-- smart notifications -->
     <string name="notification_sound_vib_screen_on_title">Noisy notifications if screen on</string>
