--- a/res/xml/weather.xml
+++ b/res/xml/weather.xml
@@ -66,6 +66,13 @@
             android:dependency="lockscreen_weather_enabled"
             android:defaultValue="true" />
 
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
+            android:key="lockscreen_weather_show_image"
+            android:title="@string/lockscreen_weather_show_image_title"
+            android:summary="@string/lockscreen_weather_show_image_summary"
+            android:dependency="lockscreen_weather_enabled"
+            android:defaultValue="true" />
+
        <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="lockscreen_weather_style"
             android:title="@string/lock_screen_weather_style_title"
