Blissify: disable weather colors when aosp weather is selected
Change-Id: I0b3077819f6d5ae7213944875c2d29373348d4b6

--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -1892,4 +1892,14 @@
         <item>1</item>
     </string-array>
 
+    <string-array name="weather_style_entries">
+        <item>@string/omni_weather</item>
+        <item>@string/aosp_weather</item>
+    </string-array>
+
+    <string-array name="weather_style_values">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
 </resources>
