--- a/res/xml/weather.xml
+++ b/res/xml/weather.xml
@@ -66,12 +66,11 @@
             android:dependency="lockscreen_weather_enabled"
             android:defaultValue="true" />
 
-       <com.bliss.support.preferences.SystemSettingSwitchPreference
+       <com.bliss.support.preferences.SystemSettingListPreference
             android:key="lockscreen_weather_style"
             android:title="@string/lock_screen_weather_style_title"
-            android:summaryOn="@string/lock_screen_weather_style_summaryOn"
-            android:summaryOff="@string/lock_screen_weather_style_summaryOff"
-            android:defaultValue="false"
+            android:entries="@array/weather_style_entries"
+            android:entryValues="@array/weather_style_values"
             android:dependency="lockscreen_weather_enabled" />
 
     </PreferenceCategory>
