--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -1902,4 +1902,15 @@
         <item>1</item>
     </string-array>
 
+    <!-- QS data usage location -->
+    <string-array name="qs_data_usage_location_entries"
+        <item>@string/qs_data_usage_location_qs_panel</item>
+        <item>@string/qs_data_usage_location_qs_statusbar</item>
+    </string-array>
+
+    <string-array name="qs_data_usage_location_values"
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
 </resources>
