--- a/res/xml/blissify_qs.xml
+++ b/res/xml/blissify_qs.xml
@@ -281,6 +281,15 @@
         android:entries="@array/qs_datausage_entries"
         android:entryValues="@array/qs_datausage_values"
         android:defaultValue="0" />
+
+    <com.bliss.support.preferences.SystemSettingListPreference
+        android:key="qs_datausage_location"
+        android:title="@string/qs_data_usage_location_title"
+        android:dialogTitle="@string/qs_data_usage_location_title"
+        android:entries="@array/qs_data_usage_location_entries"
+        android:entryValues="@array/qs_data_usage_location_values"
+        android:defaultValue="0" />
+
     </PreferenceCategory>
 
     <!-- QS Footer -->
