Add MusicCard in VolumePanel [2/2]
Change-Id: I21998e714d2359abae68e55406c3342a457fde6d

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1831,4 +1831,8 @@
     <!-- Gradient Panel QS Bg -->
     <string name="qs_new_bg_title">Gradient Qs Background</string>
     <string name="qs_new_bg_summary">Whether to enable gradient based qs panel background</string>
+
+    <!-- MusicCard -->
+    <string name="volume_panel_musiccard_title">Music Card</string>
+    <string name="volume_panel_musiccard_summary">Enable cusic card in volume panels</string>
 </resources>
