--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -1222,6 +1222,17 @@
         <item>6</item>
     </string-array>
 
+    <!-- QS battery location  -->
+    <string-array name="qs_battery_location_entries" translatable="false">
+        <item>@string/qs_battery_location_qs_panel</item>
+        <item>@string/qs_battery_location_qs_statusbar</item>
+    </string-array>
+
+    <string-array name="qs_battery_location_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
      <!-- Ticker mode -->
     <string-array name="ticker_mode_entries">
         <item>@string/ticker_disabled</item>
