--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1195,6 +1195,9 @@
     <string name="qs_disco_mode">Qs Disco Mode</string>
 
     <!-- QS battery -->
+    <string name="qs_battery_location_title">Battery location</string>
+    <string name="qs_battery_location_qs_panel">QS Panel</string>
+    <string name="qs_battery_location_qs_statusbar">Quick Statusbar</string>
     <string name="qs_use_status_bar_battery_style">Follow status bar style</string>
 
     <!-- Status Bar Ticker -->
