--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1835,4 +1835,8 @@
     <!-- MusicCard -->
     <string name="volume_panel_musiccard_title">Music Card</string>
     <string name="volume_panel_musiccard_summary">Enable cusic card in volume panels</string>
+
+    <!-- Center R Notification headers -->
+    <string name="center_notification_headers_title">Center notification headers</string>
+    <string name="center_notification_headers_summary">Whether to Center R style notification headers (Requires a SystemUI restart)</string>
 </resources>
