--- a/res/xml/blissify_notifications.xml
+++ b/res/xml/blissify_notifications.xml
@@ -248,6 +248,13 @@
         android:defaultValue="true" />
 
     <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="center_notification_headers"
+        android:title="@string/center_notification_headers_title"
+        android:summary="@string/center_notification_headers_summary"
+        android:dependency="notification_headers"
+        android:defaultValue="true" />
+
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="vibrate_on_notifications"
         android:title="@string/vibrate_on_notifications_title"
         android:summary="@string/vibrate_on_notifications_summary"
