Blissify: improve persistent settings icon toggle [2/2]
Change-Id: I4533f3fabe19958dcb5f48cb138af66612aa3e8c

--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -1932,4 +1932,16 @@
         <item>4</item>
     </string-array>
 
+    <string-array name="qs_footer_settings_entries">
+        <item>@string/qs_settings_disable</item>
+        <item>@string/qs_settings_expanded_panel</item>
+        <item>@string/qs_settings_always</item>
+    </string-array>
+
+    <string-array name="qs_footer_settings_values">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
 </resources>
