--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1791,4 +1791,9 @@
     <string name="qs_header_lightgrey">Light Grey</string>
     <string name="qs_header_accent">Accent Based</string>
     <string name="qs_header_transparent">Transparent</string>
+
+    <!-- QS Settings button-->
+    <string name="qs_settings_disable">Disable</string>
+    <string name="qs_settings_expanded_panel">Show in expanded qs panel</string>
+    <string name="qs_settings_always">Show always</string>
 </resources>
