Blissify: Add toggle for qs clock size [2/2]
Change-Id: Ifa1104a999d156b1078021f2630e4fe7f84d8ec6

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1796,4 +1796,9 @@
     <string name="qs_settings_disable">Disable</string>
     <string name="qs_settings_expanded_panel">Show in expanded qs panel</string>
     <string name="qs_settings_always">Show always</string>
+
+    <!-- QS Clock Style-->
+    <string name="qs_clock_style_title">Qs Clock Size</string>
+    <string name="qs_clock_static">Static</string>
+    <string name="qs_clock_dynamic">Dynamic (same as statusbar clock)</string>
 </resources>
