--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -1944,4 +1944,14 @@
         <item>2</item>
     </string-array>
 
+    <string-array name="qs_clock_style_entries">
+        <item>@string/qs_clock_static</item>
+        <item>@string/qs_clock_dynamic</item>
+    </string-array>
+
+    <string-array name="qs_clock_style_values">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
 </resources>
