--- a/res/xml/status_bar_clock.xml
+++ b/res/xml/status_bar_clock.xml
@@ -94,6 +94,13 @@
         android:entries="@array/status_bar_date_format_entries_values"
         android:entryValues="@array/status_bar_date_format_entries_values" />
 
+    <com.bliss.support.preferences.SystemSettingListPreference
+        android:key="qs_clock_style"
+        android:title="@string/qs_clock_style_title"
+        android:entries="@array/qs_clock_style_entries"
+        android:entryValues="@array/qs_clock_style_values"
+        android:defaultValue="1" />
+
     <com.bliss.support.preferences.CustomSeekBarPreference
         android:key="status_bar_clock_size"
         android:title="@string/status_bar_clock_font_size_title"
