Add more QS tile style 2/3
Change-Id: I4e134b49796b7490965a10bfd33e292e45f019d5

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1664,6 +1664,12 @@
     <string name="qstile_squircle">Squircle</string>
     <string name="qstile_teardrop">Teardrop</string>
     <string name="qstile_justicons">Icons without circle</string>
+    <string name="qstile_diamond">Diamond</string>
+    <string name="qstile_hexagon">Hexagon</string>
+    <string name="qstile_star">Star</string>
+    <string name="qstile_gear">Gear</string>
+    <string name="qstile_badge">Badge</string>
+    <string name="qstile_badgetwo">Badge two</string>
 
     <!-- Switch styles -->
     <string name="switch_style_title">Switch Styles</string>
