--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -1756,6 +1756,12 @@
         <item>@string/qstile_squircle</item>
         <item>@string/qstile_teardrop</item>
         <item>@string/qstile_justicons</item>
+        <item>@string/qstile_hexagon</item>
+        <item>@string/qstile_diamond</item>
+        <item>@string/qstile_star</item>
+        <item>@string/qstile_gear</item>
+        <item>@string/qstile_badge</item>
+        <item>@string/qstile_badgetwo</item>
     </string-array>
 
     <string-array name="qs_selector_values" translatable="false">
@@ -1780,6 +1786,12 @@
         <item>18</item>
         <item>19</item>
         <item>20</item>
+        <item>21</item>
+        <item>22</item>
+        <item>23</item>
+        <item>24</item>
+        <item>25</item>
+        <item>26</item>
     </string-array>
 
     <!-- Switch styles -->
