--- a/res/xml/blissify_qs.xml
+++ b/res/xml/blissify_qs.xml
@@ -68,68 +68,11 @@
         android:icon="@drawable/ic_panel"
         android:title="@string/qs_themes_category_title" >
 
-    <com.bliss.support.preferences.SystemSettingSeekBarPreference
-        android:key="qs_panel_bg_alpha"
-        android:title="@string/qs_panel_alpha_title"
-        android:summary="@string/qs_panel_alpha_summary"
-        android:max="255"
-        settings:min="0"
-        android:defaultValue="255"
-        settings:units="%" />
-
-    <com.bliss.support.preferences.SystemSettingSwitchPreference
-        android:key="qs_panel_bg_use_fw"
-        android:title="@string/qs_bg_use_fw"
-        android:summary="@string/qs_bg_use_fw_summary"
-        android:defaultValue="true"
-        android:disableDependentsState="true" />
-
-    <com.bliss.support.preferences.SystemSettingSwitchPreference
-        android:key="qs_panel_bg_use_wall"
-        android:title="@string/qs_bg_wall_title"
-        android:summary="@string/qs_bg_wall_summary"
-        android:defaultValue="false"
-        android:dependency="qs_panel_bg_use_fw" />
-
-    <com.bliss.support.preferences.SystemSettingSwitchPreference
-        android:key="qs_panel_bg_use_accent"
-        android:title="@string/qs_bg_accent_title"
-        android:summary="@string/qs_bg_accent_summary"
-        android:defaultValue="false"
-        android:dependency="qs_panel_bg_use_fw" />
-
-    <com.bliss.support.colorpicker.ColorPickerPreference
-        android:key="qs_panel_color"
-        android:title="@string/qs_panel_color_title"
-        android:defaultValue="0xffffff"
-        android:persistent="false"
-        android:dependency="qs_panel_bg_use_fw" />
-
-    <com.bliss.support.preferences.SystemSettingSwitchPreference
-        android:key="qs_blur"
-        android:title="@string/blur_quicksettings"
-        android:summary="@string/blur_quicksettings_subtitle"
-        android:defaultValue="true" />
-
-    <com.bliss.support.preferences.SystemSettingSeekBarPreference
-       android:key="qs_blur_alpha"
-       android:title="@string/qs_blur_alpha_title"
-       android:summary="@string/qs_blur_alpha_summary"
-       android:max="100"
-       settings:min="1"
-       android:defaultValue="100"
-       settings:units="%"
-       android:dependency="qs_blur" />
-
-    <com.bliss.support.preferences.SystemSettingSeekBarPreference
-       android:key="qs_blur_intensity"
-       android:title="@string/qs_blur_intensity_title"
-       android:summary="@string/qs_blur_intensity_summary"
-       android:max="100"
-       settings:min="1"
-       settings:units="%"
-       android:persistent="false"
-       android:dependency="qs_blur" />
+        <Preference
+            android:id="@+id/qs_themes_screen"
+            android:title="@string/qs_themes_category_title"
+            android:summary="@string/qs_themes_summary"
+            android:fragment="com.blissroms.blissify.fragments.qs.QsThemes"/>
 
     </PreferenceCategory>
 
@@ -139,45 +82,11 @@
         android:icon="@drawable/ic_statusbar_icons"
         android:title="@string/qs_columns_rows_category_title" >
 
-    <com.bliss.support.preferences.SystemSettingListPreference
-        android:key="qs_quickbar_columns"
-        android:title="@string/sysui_qqs_count_title"
-        android:dialogTitle="@string/sysui_qqs_count_title"
-        android:entries="@array/qs_quickbar_layout_entries"
-        android:entryValues="@array/qs_quickbar_layout_values"
-        android:defaultValue="6" />
-
-    <com.bliss.support.preferences.SystemSettingSeekBarPreference
-        android:key="qs_rows_portrait"
-        android:title="@string/qs_rows_portrait_title"
-        android:max="5"
-        android:min="1"
-        android:defaultValue="3"
-        settings:units="" />
-
-    <com.bliss.support.preferences.SystemSettingSeekBarPreference
-        android:key="qs_rows_landscape"
-        android:title="@string/qs_rows_landscape_title"
-        android:max="5"
-        android:min="1"
-        android:defaultValue="2"
-        settings:units="" />
-
-    <com.bliss.support.preferences.SystemSettingSeekBarPreference
-        android:key="qs_columns_portrait"
-        android:title="@string/qs_columns_portrait_title"
-        android:max="7"
-        android:min="1"
-        android:defaultValue="4"
-        settings:units="" />
-
-    <com.bliss.support.preferences.SystemSettingSeekBarPreference
-        android:key="qs_columns_landscape"
-        android:title="@string/qs_columns_landscape_title"
-        android:max="9"
-        android:min="1"
-        android:defaultValue="4"
-        settings:units="" />
+        <Preference
+            android:id="@+id/qs_rows_cols_screen"
+            android:title="@string/qs_columns_rows_category_title"
+            android:summary="@string/qs_columns_rows_summary"
+            android:fragment="com.blissroms.blissify.fragments.qs.QsRowsCols"/>
 
     </PreferenceCategory>
 
