Blissify: declutter a few options
Change-Id: I8ebb23f55aa70421a2c3dd8a629b912c35d0a125

--- a/res/xml/blissify.xml
+++ b/res/xml/blissify.xml
@@ -65,6 +65,13 @@
           android:fragment="com.blissroms.blissify.fragments.gestures.Gestures"
           android:icon="@drawable/ic_blissify_gestures"/>
 
+      <!-- Biometrics -->
+      <com.blissroms.blissify.ui.BlissPreference
+          android:key="biometrics_category"
+          android:title="@string/blissify_biometrics_title"
+          android:fragment="com.blissroms.blissify.fragments.biometrics.Biometrics"
+          android:icon="@drawable/ic_blissify_biometrics"/>
+
       <!-- Notifications -->
       <com.blissroms.blissify.ui.BlissPreference
           android:key="notifications_category"
