--- a/res/xml/custom_carrier_label.xml
+++ b/res/xml/custom_carrier_label.xml
@@ -19,6 +19,16 @@
 	android:title="@string/custom_carrier_label_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+    <!-- Bliss Logo Header -->
+    <Preference
+        android:key="bliss_logo"
+        android:layout="@layout/bliss_logo" />
+
+    <!-- Carrier Label -->
+    <PreferenceCategory
+        android:title="@string/carrier_label_settings_title"
+        android:icon="@drawable/ic_statusbar_icons">
+
     <com.bliss.support.preferences.SystemSettingListPreference
         android:key="status_bar_show_carrier"
         android:title="@string/show_carrier_title"
@@ -41,5 +51,13 @@
         android:title="@string/status_bar_carrier_color"
         android:defaultValue="0xffffffff"
         android:dependency="status_bar_show_carrier" />
+
+    <Preference
+        android:key="carrier_label_footer"
+        android:icon="@drawable/ic_info"
+        android:title="@string/carrier_label_footer_title"
+        android:fragment="com.blissroms.blissify.fragments.misc.CutoutSettings" />
+
+    </PreferenceCategory>
 
 </PreferenceScreen>
