--- a/res/xml/power_menu_settings.xml
+++ b/res/xml/power_menu_settings.xml
@@ -25,6 +25,10 @@
         android:key="bliss_logo"
         android:layout="@layout/bliss_logo" />
 
+    <PreferenceCategory
+        android:icon="@drawable/ic_power"
+        android:title="@string/power_menu_toggles_title" >
+
     <SwitchPreference
         android:key="screenshot"
         android:title="@string/power_menu_screenshot_title"
@@ -60,6 +64,8 @@
         android:key="power_menu_emergency_affordance"
         android:title="@string/power_menu_emergency_title"
         android:defaultValue="false" />
+
+    </PreferenceCategory>
 
     <PreferenceCategory
         android:key="advanced_reboot_key"
