--- a/res/xml/status_bar_clock.xml
+++ b/res/xml/status_bar_clock.xml
@@ -24,6 +24,11 @@
         android:key="bliss_logo"
         android:layout="@layout/bliss_logo" />
 
+    <PreferenceCategory
+        android:key="status_bar_clock_autohide"
+        android:icon="@drawable/ic_clock"
+        android:title="@string/status_bar_clock_auto_hide_title">
+
     <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="status_bar_clock_auto_hide"
         android:title="@string/status_bar_clock_auto_hide_title"
@@ -51,6 +56,13 @@
         android:dependency="status_bar_clock_auto_hide"
         android:defaultValue="5"
         android:persistent="false" />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="clock_customisations_category"
+        android:icon="@drawable/ic_clock"
+        android:title="@string/clock_customisations_title">
 
     <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="status_bar_clock_seconds"
@@ -94,12 +106,26 @@
         android:entries="@array/status_bar_date_format_entries_values"
         android:entryValues="@array/status_bar_date_format_entries_values" />
 
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="qs_clock_style_category"
+        android:icon="@drawable/ic_clock"
+        android:title="@string/qs_clock_style_title">
+
     <com.bliss.support.preferences.SystemSettingListPreference
         android:key="qs_clock_style"
         android:title="@string/qs_clock_style_title"
         android:entries="@array/qs_clock_style_entries"
         android:entryValues="@array/qs_clock_style_values"
         android:defaultValue="1" />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="clock_font_and_color_category"
+        android:icon="@drawable/ic_clock"
+        android:title="@string/clock_font_and_color_title">
 
     <com.bliss.support.preferences.CustomSeekBarPreference
         android:key="status_bar_clock_size"
@@ -121,5 +147,7 @@
         android:entries="@array/font_style_entries"
         android:entryValues="@array/font_style_values"
         android:defaultValue="36" />
+
+    </PreferenceCategory>
 
 </PreferenceScreen>
