--- a/res/xml/system_animation_controls.xml
+++ b/res/xml/system_animation_controls.xml
@@ -21,6 +21,10 @@
         android:key="bliss_logo"
         android:layout="@layout/bliss_logo" />
 
+    <PreferenceCategory
+        android:title="@string/system_anim"
+        android:icon="@drawable/ic_animation">
+
         <com.bliss.support.preferences.GlobalSettingSwitchPreference
             android:key="disable_transition_animations"
             android:title="@string/disable_transition_animations_title"
@@ -84,4 +88,7 @@
         <ListPreference
             android:key="wallpaper_intra_close"
             android:title="@string/wallpaper_intra_close_title" />
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
