--- a/res/xml/volume_steps_fragment.xml
+++ b/res/xml/volume_steps_fragment.xml
@@ -19,6 +19,10 @@
         android:key="bliss_logo"
         android:layout="@layout/bliss_logo" />
 
+    <PreferenceCategory
+        android:title="@string/hardware_keys_volume_keys_title"
+        android:icon="@drawable/ic_volume">
+
     <ListPreference
         android:key="volume_steps_alarm"
         android:title="@string/volume_steps_alarm_title"
@@ -60,5 +64,7 @@
         android:title="@string/volume_steps_voice_call_title"
         android:entries="@array/volume_steps_entries"
         android:entryValues="@array/volume_steps_entries" />
+
+    </PreferenceCategory>
 
 </PreferenceScreen>
