Settings: categorise some more and organise
* add logos to pref screen, keep it consistent
* add search index to missing fragments

Change-Id: I35f59176b4a3d064a0f2becf0fe7bdf8fad1be0e

--- a/res/xml/blissify_statusbar.xml
+++ b/res/xml/blissify_statusbar.xml
@@ -278,4 +278,9 @@
 
     </PreferenceCategory>
 
+    <Preference
+        android:key="statusbar_footer_pref"
+        android:title="@string/statusbar_footer_title"
+        android:fragment="com.blissroms.blissify.fragments.misc.CutoutSettings" />
+
 </PreferenceScreen>
