--- a/res/xml/blissify_statusbar.xml
+++ b/res/xml/blissify_statusbar.xml
@@ -278,4 +278,12 @@
 
     </PreferenceCategory>
 
+    <Preference
+        android:key="statusbar_footer_pref"
+        android:title="@string/statusbar_footer_title" >
+            <intent android:action="android.intent.action.MAIN"
+                    android:targetPackage="com.blissroms.blissify"
+                    android:targetClass="com.blissroms.blissify.fragments.misc.CutoutSettings" />
+    </Preference>
+
 </PreferenceScreen>
