Settings: categorise some more and organise
* add logos to pref screen, keep it consistent
* add search index to missing fragments

Change-Id: I35f59176b4a3d064a0f2becf0fe7bdf8fad1be0e

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -64,6 +64,8 @@
     <string name="music_options">Music Options</string>
     <string name="qs_rows_cols_title">QS Rows/Columns</string>
     <string name="qs_columns_rows_summary">change number of qs rows and columns</string>
+    <string name="clock_customisations_title">Clock Customisations</string>
+    <string name="clock_font_and_color_title">Clock Font And Color</string>
 
     <!-- AOKP custom system animations -->
     <string name="animation_title">Animations</string>
