--- a/res/xml/blissify_statusbar.xml
+++ b/res/xml/blissify_statusbar.xml
@@ -278,4 +278,10 @@
 
     </PreferenceCategory>
 
+    <Preference
+        android:key="statusbar_footer_pref"
+        android:icon="@drawable/ic_info"
+        android:title="@string/statusbar_footer_title"
+        android:fragment="com.blissroms.blissify.fragments.misc.CutoutSettings" />
+
 </PreferenceScreen>
