Blissify: Move statusbar weather image to qspanel
Change-Id: I1dc9f446b96fd9d1a17b599a369bd41646357f49

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1023,7 +1023,7 @@
     <string name="status_bar_temperature_hide_scale_hide_image">Show temp without scale</string>
     <string name="status_bar_show_image">Show image</string>
     <string name="sb_weather_statusbar">Status bar</string>
-    <string name="sb_weather_header">Expanded header</string>
+    <string name="sb_weather_qspanel">QS Panel</string>
 
     <!-- QS footer icons -->
     <string name="qs_footer_title">Footer</string>
