Blissify: Use overlay for default value of pressed fod icon [2/2]
Change-Id: Icc80678cce8425d7e975fd512e4b2bd8f378ddd8

--- a/res/xml/blissify_biometrics.xml
+++ b/res/xml/blissify_biometrics.xml
@@ -56,7 +56,7 @@
         android:summary="@string/fod_pressed_state_summary"
         android:entries="@array/fod_pressed_state_entries"
         android:entryValues="@array/fod_pressed_state_values"
-        android:defaultValue="0" />
+        android:defaultValue="@*android:integer/config_pressed_fod_icon" />
 
     <Preference
         android:summary="@string/fod_pressed_state_footer" />
