Blissify: add toggle for carrier group visibility [2/2]
Change-Id: Ic3ed3e313786060aa7e6b7511269b073b07e45ce

--- a/res/xml/blissify_qs.xml
+++ b/res/xml/blissify_qs.xml
@@ -215,6 +215,12 @@
         android:title="@string/qs_footer_title" >
 
     <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="qs_footer_show_carrier"
+        android:title="@string/qs_footer_carrier_title"
+        android:summary="@string/qs_footer_carrier_summary"
+        android:defaultValue="true" />
+
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="qs_footer_show_edit"
         android:title="@string/qs_footer_edit_title"
         android:summary="@string/qs_footer_edit_summary"
