--- a/res/xml/blissify_settings_pulse.xml
+++ b/res/xml/blissify_settings_pulse.xml
@@ -28,21 +28,26 @@
         android:icon="@drawable/ic_nav_buttons"
         android:title="@string/navigation_bar_options_category" >
 
-    <com.bliss.support.preferences.SystemSettingSwitchPreference
+    <com.bliss.support.preferences.SecureSettingSwitchPreference
         android:key="navbar_pulse_enabled"
-        android:title="@string/show_pulse_title"
-        android:summary="@string/show_pulse_summary"
+        android:title="@string/show_navbar_pulse_title"
+        android:summary="@string/show_navbar_pulse_summary"
         android:defaultValue="false" />
 
-    <com.bliss.support.preferences.SystemSettingListPreference
-        android:key="navbar_pulse_render_style"
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="lockscreen_pulse_enabled"
+        android:title="@string/show_lockscreen_pulse_title"
+        android:summary="@string/show_lockscreen_pulse_summary"/>
+
+    <com.bliss.support.preferences.SecureSettingListPreference
+        android:key="pulse_render_style"
         android:title="@string/pulse_render_mode_title"
         android:entries="@array/pulse_render_mode_entries"
         android:entryValues="@array/pulse_render_mode_values"
         android:defaultValue="0"
         android:dependency="navbar_pulse_enabled" />
 
-    <com.bliss.support.preferences.SystemSettingSwitchPreference
+    <com.bliss.support.preferences.SecureSettingSwitchPreference
         android:key="pulse_smoothing_enabled"
         android:title="@string/smoothing_enabled_title"
         android:summary="@string/smoothing_enabled_summary"
@@ -56,20 +61,20 @@
         android:title="@string/pulse_color"
         android:dependency="navbar_pulse_enabled">
 
-        <com.bliss.support.preferences.SystemSettingListPreference
-            android:key="navbar_pulse_color_type"
+        <com.bliss.support.preferences.SecureSettingListPreference
+            android:key="pulse_color_mode"
             android:title="@string/pulse_color_mode"
             android:entries="@array/pulse_color_mode_entries"
             android:entryValues="@array/pulse_color_mode_values"
             android:defaultValue="1"/>
 
         <com.bliss.support.colorpicker.ColorPickerPreference
-            android:key="navbar_pulse_color_user"
+            android:key="pulse_color_user"
             android:title="@string/pulse_color_chooser"
             android:persistent="false" />
 
-        <com.bliss.support.preferences.CustomSystemSeekBarPreference
-            android:key="navbar_pulse_lavalamp_speed"
+        <com.bliss.support.preferences.CustomSecureSeekBarPreference
+            android:key="pulse_lavalamp_speed"
             android:title="@string/lavamp_speed_title"
             android:max="30000"
             android:defaultValue="10000"
@@ -83,7 +88,7 @@
         android:title="@string/pulse_legacy_mode_advanced_category"
         android:dependency="navbar_pulse_enabled">
 
-        <com.bliss.support.preferences.CustomSystemSeekBarPreference
+        <com.bliss.support.preferences.CustomSecureSeekBarPreference
             android:key="pulse_custom_dimen"
             android:title="@string/pulse_custom_dimen"
             android:max="30"
@@ -91,7 +96,7 @@
             settings:min="1"
             settings:units="dp"/>
 
-        <com.bliss.support.preferences.CustomSystemSeekBarPreference
+        <com.bliss.support.preferences.CustomSecureSeekBarPreference
             android:key="pulse_custom_div"
             android:title="@string/pulse_custom_div"
             android:max="44"
@@ -100,7 +105,7 @@
             settings:interval="2"
             settings:units="dp"/>
 
-        <com.bliss.support.preferences.CustomSystemSeekBarPreference
+        <com.bliss.support.preferences.CustomSecureSeekBarPreference
             android:key="pulse_filled_block_size"
             android:title="@string/pulse_filled_block_size"
             android:max="8"
@@ -108,7 +113,7 @@
             settings:min="4"
             settings:units="dp"/>
 
-        <com.bliss.support.preferences.CustomSystemSeekBarPreference
+        <com.bliss.support.preferences.CustomSecureSeekBarPreference
             android:key="pulse_empty_block_size"
             android:title="@string/pulse_empty_block_size"
             android:max="4"
@@ -116,7 +121,7 @@
             settings:min="0"
             settings:units="dp"/>
 
-        <com.bliss.support.preferences.CustomSystemSeekBarPreference
+        <com.bliss.support.preferences.CustomSecureSeekBarPreference
             android:key="pulse_custom_fudge_factor"
             android:title="@string/pulse_custom_fudge_factor"
             android:max="6"
@@ -129,14 +134,14 @@
         android:title="@string/pulse_solid_dimen_category"
         android:dependency="navbar_pulse_enabled">
 
-        <com.bliss.support.preferences.CustomSystemSeekBarPreference
+        <com.bliss.support.preferences.CustomSecureSeekBarPreference
             android:key="pulse_solid_units_opacity"
             android:title="@string/pulse_solid_units_opacity"
             android:max="255"
             android:defaultValue="200"
             settings:min="0"/>
 
-        <com.bliss.support.preferences.CustomSystemSeekBarPreference
+        <com.bliss.support.preferences.CustomSecureSeekBarPreference
             android:key="pulse_solid_units_count"
             android:title="@string/pulse_solid_units_count"
             android:max="128"
@@ -144,7 +149,7 @@
             settings:interval="16"
             settings:min="32"/>
 
-        <com.bliss.support.preferences.CustomSystemSeekBarPreference
+        <com.bliss.support.preferences.CustomSecureSeekBarPreference
             android:key="pulse_solid_fudge_factor"
             android:title="@string/pulse_custom_fudge_factor"
             android:max="7"
