--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -1961,6 +1961,7 @@
 
     <!--  Volume Panel  -->
     <string-array name="volume_panel_entries">
+        <item>@string/volume_panel_stock</item>
         <item>@string/volume_panel_aosp</item>
         <item>@string/volume_panel_compat</item>
         <item>@string/volume_panel_oreo</item>
@@ -1968,6 +1969,7 @@
     </string-array>
 
     <string-array name="volume_panel_values" translatable="false">
+        <item>@string/volume_panel_stock_val</item>
         <item>@string/volume_panel_aosp_val</item>
         <item>@string/volume_panel_compat_val</item>
         <item>@string/volume_panel_oreo_val</item>
