--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1838,11 +1838,13 @@
 
     <!--  Volume Panel Plugin   -->
     <string name="volume_panel">Volume Panel Style</string>
+    <string name="volume_panel_stock">Stock AOSPA</string>
     <string name="volume_panel_aosp">AOSP</string>
     <string name="volume_panel_compat">Compat</string>
     <string name="volume_panel_oreo">Oreo</string>
     <string name="volume_panel_tiled">Tiled</string>
     <!--  Volume Panel Plugin Values   -->
+    <string name="volume_panel_stock_val">none</string>
     <string name="volume_panel_aosp_val">co.potatoproject.plugin.volume.aosp</string>
     <string name="volume_panel_compat_val">co.potatoproject.plugin.volume.compact</string>
     <string name="volume_panel_oreo_val">co.potatoproject.plugin.volume.oreo</string>
