--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -654,7 +654,7 @@
 
     <!-- Music Visualizer -->
     <string name="music_visualizer_title">Music visualizer</string>
-    <string name="music_visualizer_summary">Display music visualizer when available</string>
+    <string name="music_visualizer_summary">Enable visualiser for lockscreen in pulse settings</string>
 
     <!-- Ambient visualizer -->
     <string name="ambient_visualizer_title">Ambient visualizer</string>
@@ -749,6 +749,7 @@
 
     <!-- Audio Panel view  -->
     <string name="audio_panel_view_title">Volume panel</string>
+    <string name="extended_volume_panel_title">Extended Volume panel</string>
     <string name="audio_panel_view_summary">Customize volume panel dialog</string>
     <string name="audio_panel_view_info">Active volume stream will be displayed on the screen even if disabled here. Volume streams enabled here would be displayed forcefully.</string>
     <string name="audio_panel_view_media_title">Media</string>
@@ -1696,7 +1697,7 @@
     <!-- Pulse -->
     <string name="pulse_help_policy_notice_summary">Pulse does not work with some audio sources when listening on device speaker</string>
     <string name="pulse_settings">Pulse</string>
-    <string name="pulse_settings_summary">Navigation bar audio graphic equalizer</string>
+    <string name="pulse_settings_summary">Navigation bar/Lockscreen audio graphic equalizer</string>
     <string name="show_navbar_pulse_title">Navbar Pulse</string>
     <string name="show_navbar_pulse_summary">Audio graphic equalizer on the navigation bar area, also if bar is hidden</string>
     <string name="show_lockscreen_pulse_title">Lockscreen Pulse</string>
